--- a/src/static/css/animationText.css
+++ b/src/static/css/animationText.css
@@ -61,6 +61,7 @@
     opacity: 1;
   }
 }
+
 .body-container {
   align-content: center;
   width: 80%;
@@ -124,6 +125,9 @@
 .quizs-size {
   width: 80%;
   height: 20vh;
+  /* white-space: nowrap; */
+  overflow: hidden;
+  word-break: keep-all;
 }
 
 .parent-body-flex {
@@ -137,8 +141,110 @@
 }
 
 .quiz-text {
-  word-break: break-word;
-  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media only screen and (max-width: 480px) {
+  .text-object {
+    color: #3e3e3e;
+    text-align: center;
+    font: 30px/1 "TeXGyreAdventorBold";
+    text-transform: none;
+  }
+
+  .anim-object.active {
+    display: block;
+    z-index: auto;
+  }
+
+  .body-container {
+    align-content: center;
+    width: auto;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    /* background: #5f83b9;
+    background: radial-gradient(ellipse at center, #04520852 0, #cf9b9bb2 100%); */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#192d38",endColorstr="#211f2f",GradientType=1);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #fff;
+    font-weight: auto;
+  }
+
+  .parent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: auto;
+    grid-row-gap: auto;
+    justify-items: center;
+    text-align: center;
+  }
+
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  .div3 {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  .div4 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .div5 {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+  .div6 {
+    grid-area: 2 / 3 / 3 / 4;
+  }
+  .div7 {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  .div8 {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+  .div9 {
+    grid-area: 3 / 3 / 4 / 4;
+  }
+
+  .quiz-border {
+    border: 1px;
+    border-color: rgb(255, 227, 148);
+    border-style: solid;
+    border-radius: 30%;
+  }
+
+  .quizs-size {
+    width: 4.2em;
+    height: 4.2em;
+    overflow: hidden;
+    word-break: keep-all;
+  }
+
+  .parent-body-flex {
+    display: flex;
+    justify-content: center;
+    margin: 1px 1px 1px 1px;
+  }
+
+  .media-index {
+    margin: 0 0 0 0;
+  }
+
+  .media-h3 {
+    font-size: 1rem;
+    line-height: 1;
+    word-break: keep-all;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .media-tag {
+    display: none;
+  }
 }
